[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Roger Peralta Aranibar <erperalta@ucsp.edu.pe>"]

[tool.poetry.dependencies]
python = "3.6.8"
flask = "^1.1.2"
flask-socketio = "^4.3.0"
gunicorn = "^20.0.4"
gevent = "^20.6.2"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
ipython = "^7.15.0"
pytest = "^5.2"
flake8 = "^3.8.2"
flake8-bugbear = "^20.1.4"
flake8-colors = "^0.1.6"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
flake8-logging-format = "^0.6.0"
flake8-polyfill = "^1.0.2"
flake8-print = "^3.1.4"
flake8-quotes = "^3.2.0"
flake8-rst-docstrings = "^0.0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
